feat: return generated IBAN after registration
