# backend/docs/swagger.json
@@ -1559,7 +1559,13 @@
         "api.RegisterResponse": {
             "type": "object",
             "properties": {
+                "account_id": {
+                    "type": "string"
+                },
                 "email": {
+                    "type": "string"
+                },
+                "masked_iban": {
                     "type": "string"
                 },
                 "user_id": {
